# representation-engineering

./: .gitignore  README.md  pyproject.toml
dev-notes/: 2026-07-22-gguf-native-projection-lora-experiment.md  2026-07-22-sandbox-prototype-results.md
experiments/: benchmark_sparse_q4k.py
src/repreng_gguf/: __init__.py  adapter.py  cli.py  gguf_reader.py  gguf_writer.py  projection.py  quantization.py  tensor_source.py  validation.py
tests/: test_adapter_writer.py  test_cli_validation.py  test_gguf_streaming.py  test_projection.py
